--- a/TODO
+++ b/TODO
@@ -5,8 +5,7 @@ Rockon TODO list (this list is not complete)
 > error handling
   > more tests
   > messages, dialogs for the user
-> debug helpers
 > better theme, oops a default theme
   > document on theming
-> better handling of xmms2 connection
+> check readbility of functions with multiple exit points
 > support for plugins
